--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,3 +42,13 @@ h2 {
 .carousel-caption h2 {
   color: rgb(212, 114, 114);
 }
+
+.icon {
+  position: absolute;
+  top: -2px;
+  width: 16px;
+  height: 16px;
+  line-height: 1;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.25);
+}
