--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,3 +52,10 @@ h2 {
   font-size: 16px;
   color: rgba(0, 0, 0, 0.25);
 }
+
+.activelang {
+  padding: 0.2rem;
+  background-color: rgb(37, 34, 34);
+  border: black solid 1px;
+  border-radius: 2px;
+}
